# ProyectoOpenCV

./: CMakeLists.txt  Convolution.h  Image.h  Padding.h  RGB.h  fireHistogram.csv  main.cpp  nonFireGradient.csv  nonFireHistogram.csv  nonFireHistrogram.csv
